:recycle:[Refactor]: 지구 상태 조회 변경